\name{NEWS}
\title{PMCMR News}
\encoding{UTF-8}
\section{CHANGES IN PMCMR VERSION 1.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The LaTeX document (vignette) was corrected to avoid
      compilation errors.
    }
  }
}
\section{CHANGES IN PMCMR VERSION 1.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item A formula method \code{posthoc.kruskal.nemenyi.test.formula()} and
      \code{posthoc.friedman.nemenyi.formula()} was added 
      to the code in a similar fashion as it is coded in
  \code{kruskal.test} and \code{friedman.test} of the package
  \code{stats}. The NAMSPACE file and the .Rd files were updated accordingly.
    }
  }
}
