@@ -1,8 +1,8 @@
 Package: PMCMR
 Type: Package
 Title: Calculate Pairwise Multiple Comparisons of Mean Rank Sums
-Version: 1.2
-Date: 2015-08-22
+Version: 1.3
+Date: 2015-11-07
 Author: Thorsten Pohlert
 Maintainer: Thorsten Pohlert <thorsten.pohlert@gmx.de>
 Description: The Kruskal and Wallis one-way analysis of variance by ranks 
@@ -18,7 +18,7 @@ Description: The Kruskal and Wallis one-way analysis of variance by ranks
 Depends: R (>= 3.0.0), stats, base
 Encoding: UTF-8
 License: GPL (>= 3)
-Packaged: 2015-08-22 10:07:40 UTC; thorpohl
+Packaged: 2015-11-07 10:22:33 UTC; thorpohl
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2015-08-22 14:57:18
+Date/Publication: 2015-11-07 14:53:32
