@@ -1,14 +1,14 @@
-496cd0029b7d200ebdd5e2935a3510bc *DESCRIPTION
-1947a1466e1f10a2fce140beecd69c5c *NAMESPACE
+62d22e1835c3997572356da24b5602ff *DESCRIPTION
+69ffdc9f6c7e1c1a83522edec60d6481 *NAMESPACE
 2f3afb63dee0907948adf642f949b3b6 *R/posthoc.friedman.nemenyi.test.R
 02bfc9ba6bec7f6001cda7c5bfddbd4c *R/posthoc.kruskal.nemenyi.test.R
 a375900a72f6a0f57a75598649d22b35 *build/vignette.rds
-c2b13bc8882557a1561800ddd6f8930e *inst/NEWS.Rd
-21c39d8a5ee294e0af283a84727a7cc8 *inst/doc/PMCMR.R
-8fa8aa2d7071fe6303794f0afa27e25f *inst/doc/PMCMR.Rnw
-147057cffd70d9f8fd593d88b5e17784 *inst/doc/PMCMR.pdf
-75ea5b002aa96aefc4f205609c9368a9 *man/PMCMR-package.Rd
-03393a3f301fbcee1afb59fb7621b285 *man/posthoc.friedman.nemenyi.test.Rd
+11cf88f090f9d606dc2a2a31dd6948e8 *inst/NEWS.Rd
+ccfe6a1f1aafddd8dfba0f63ac257005 *inst/doc/PMCMR.R
+459db0786c2cd1a8b280d5ba89e94935 *inst/doc/PMCMR.Rnw
+b70dff982402b1586c7d83ba85cb86f7 *inst/doc/PMCMR.pdf
+a7ba8a7c8515fe43dc09eef701c59440 *man/PMCMR-package.Rd
+8ffbe5c986e73ef1040c2a83320f9f50 *man/posthoc.friedman.nemenyi.test.Rd
 5edf1e3cdb7ea9d1e24f7deb6e5ca772 *man/posthoc.kruskal.nemenyi.test.Rd
-8fa8aa2d7071fe6303794f0afa27e25f *vignettes/PMCMR.Rnw
+459db0786c2cd1a8b280d5ba89e94935 *vignettes/PMCMR.Rnw
 0f1b0317d370a0981dfb3a19d9817779 *vignettes/PMCMR.bib
