@@ -6,4 +6,3 @@ S3method(posthoc.kruskal.nemenyi.test, default)
 S3method(posthoc.kruskal.nemenyi.test, formula)
 S3method(posthoc.friedman.nemenyi.test, default)
 S3method(posthoc.friedman.nemenyi.test, formula)
-
